EnumModelMapper get 추가