@@ -7,13 +7,13 @@ import java.util.stream.Collectors;
 
 public class EnumModelMapper {
 
-    /** key: Enum Class name */
+    /** key: Enum class name */
     private final Map<String, List<? extends EnumModel>> factory = new HashMap<>();
 
     private List<EnumModel> toEnumModels(Class<? extends MappingEnum> e) {
         return Arrays.stream(e.getEnumConstants())
                 .map(EnumModel::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void put(Class<? extends MappingEnum> e) {
@@ -31,8 +31,8 @@ public class EnumModelMapper {
                         throw new IllegalArgumentException("Cannot instantiate [" + enumModel.getName() + "] " +
                                 "with constructor(" + e.getName() + ")", ex);
                     }
-                })
-                .toList();
+                }).toList();
+
         factory.put(e.getName(), enumModels);
     }
 
